--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "study-uk",
+  "name": "Study-uk",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "axios": "^1.4.0"
   }
 }
